--- a/index.html
+++ b/index.html
@@ -1,74 +1,105 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
     <title>Bitcoin Network Graph</title>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/cytoscape@3.16.3/dist/cytoscape.min.js"></script>
+    <script src="https://unpkg.com/cytoscape/dist/cytoscape.min.js"></script>
+    <style>
+        #cy {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+        }
+    </style>
 </head>
 <body>
-    <div id="cy"></div>
-    <script>
-        $(function(){
-            var cy = cytoscape({
-                container: $('#cy'),
-                style: [
-                    {
-                        selector: 'node',
-                        style: {
-                            'label': 'data(id)',
-                            'background-color': '#666',
-                            'font-size': '10px'
-                        }
-                    },
-                    {
-                        selector: 'edge',
-                        style: {
-                            'line-color': '#ccc',
-                            'width': 1
-                        }
-                    }
-                ],
-                layout: {
-                    name: 'cose'
+<div id="cy"></div>
+<script>
+    var cy = cytoscape({
+        container: document.getElementById('cy'),
+        style: [
+            {
+                selector: 'node',
+                style: {
+                    'background-color': '#666',
+                    'label': 'data(id)',
+                    'font-size': '12px',
+                    'color': '#fff',
+                    'text-wrap': 'wrap'
                 }
-            });
+            },
+            {
+                selector: 'edge',
+                style: {
+                    'width': 2,
+                    'line-color': '#ccc',
+                    'curve-style': 'bezier',
+                    'target-arrow-color': '#ccc',
+                    'target-arrow-shape': 'triangle',
+                    'text-wrap': 'wrap'
+                }
+            }
+        ],
+        layout: {
+            name: 'dagre'
+        },
+        elements: []
+    });
 
-            var walletAddress = "bc1qnuzwv5afxjhpx8lwp3gt0ld2cuxvgq4mm73w87";
-
-            // Make API request to Blockchain.com
-            $.getJSON("https://api.blockchain.com/v3/txs/?active=" + walletAddress, function(data){
-                $.each(data.txs, function(index, transaction){
-                    // Add nodes for each input and output address
-                    $.each(transaction.inputs, function(index, input){
-                        cy.add({
-                            data: {
-                                id: input.prev_out.addr
-                            }
-                        });
+    // Fetch Bitcoin transaction data from Blockchain.com API
+    fetch('https://api.blockchain.com/v3/explorer/address/1JCe8z4jJVNXSjohjM4i9Hh813dLCNx2Sy?limit=50&offset=0&sort=0')
+        .then(function (response) {
+            return response.json();
+        })
+        .then(function (json) {
+            // Create nodes and edges for each transaction involving the specified wallet
+            var elements = [];
+            json.txs.forEach(function (tx) {
+                var txId = tx.hash;
+                var inputs = tx.inputs.map(function (input) {
+                    return input.prev_out.addr;
+                });
+                var outputs = tx.out.map(function (output) {
+                    return output.addr;
+                });
+                if (inputs.includes('1JCe8z4jJVNXSjohjM4i9Hh813dLCNx2Sy') || outputs.includes('1JCe8z4jJVNXSjohjM4i9Hh813dLCNx2Sy')) {
+                    elements.push({
+                        data: {
+                            id: txId,
+                            label: txId + '\n' + inputs.join(', ') + ' -> ' + outputs.join(', ')
+                        }
                     });
-                    $.each(transaction.out, function(index, output){
-                        cy.add({
-                            data: {
-                                id: output.addr
-                            }
-                        });
-                    });
-
-                    // Add edges between input and output addresses
-                    $.each(transaction.inputs, function(index, input){
-                        $.each(transaction.out, function(index, output){
-                            cy.add({
+                    inputs.forEach(function (input) {
+                        if (input !== '1JCe8z4jJVNXSjohjM4i9Hh813dLCNx2Sy') {
+                            elements.push({
                                 data: {
-                                    source: input.prev_out.addr,
-                                    target: output.addr
+                                    id: input
                                 }
                             });
-                        });
+                            elements.push({
+                                data: {
+                                    id: input + '-' + txId,
+                                    source: input,
+                                    target: txId
+                                }
+                            });
+                        }
                     });
-                });
-            });
-        });
-    </script>
-</body>
-</html>
+                    outputs.forEach(function (output) {
+                        if (output !== '1JCe8z4jJVNXSjohjM4i9Hh813dLCNx2Sy') {
+                            elements.push({
+                                data: {
+                                    id: output
+                                }
+                            });
+                            elements.push({
+                                data: {
+                                    id: txId + '-' + output,
+                                    source: txId,
+                                    target: output
+                                }
+                            });
+                       
