--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <title>Bitcoin Network Graph</title>
-    <script src="https://d3js.org/d3.v6.min.js"></script>
-    <script src="app.js"></script>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8">
+  <title>Bitcoin Network Graph</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Bitcoin Network Graph</h1>
-    <div id="graph"></div>
+  <div id="graph"></div>
+  <script src="https://d3js.org/d3.v6.min.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
