--- a/index.html
+++ b/index.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>Bitcoin Network Graph</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div id="graph"></div>
-  <script src="https://d3js.org/d3.v6.min.js"></script>
-  <script src="app.js"></script>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>Bitcoin Network Graph</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: Arial, sans-serif;
+      }
+      #graph {
+        width: 100%;
+        height: 100vh;
+      }
+      .node {
+        fill: #ffcc00;
+        stroke: #333;
+        stroke-width: 2px;
+        cursor: pointer;
+      }
+      .node:hover {
+        fill: #ffea99;
+      }
+      .edge {
+        stroke: #ccc;
+        stroke-width: 1px;
+      }
+      .tooltip {
+        position: absolute;
+        z-index: 9999;
+        background-color: #fff;
+        border: 1px solid #333;
+        border-radius: 5px;
+        padding: 10px;
+        font-size: 12px;
+        pointer-events: none;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="graph"></div>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="script.js"></script>
+  </body>
 </html>
